--- a/style.css
+++ b/style.css
@@ -41,3 +41,21 @@ object {
   border: 1px solid #444;
   background: #1e1e1e;
 }
+
+#dem-btn {
+  background-color: #1B2A41;
+  color: white;
+  border: 2px solid #375A85;
+}
+
+#rep-btn {
+  background-color: #812B2B;
+  color: white;
+  border: 2px solid #B25B5B;
+}
+
+#tossup-btn {
+  background-color: #C4C4C4;
+  color: black;
+  border: 2px solid #999;
+}
