--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .controls {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 button {
@@ -22,6 +22,25 @@ button {
   padding: 10px 15px;
   font-size: 1em;
   cursor: pointer;
+  border-radius: 5px;
+  border: 2px solid white;
+  color: white;
+}
+
+#dem-btn {
+  background-color: #1B2A41;
+  border-color: #375A85;
+}
+
+#rep-btn {
+  background-color: #812B2B;
+  border-color: #B25B5B;
+}
+
+#tossup-btn {
+  background-color: #C4C4C4;
+  color: black;
+  border-color: #999;
 }
 
 .counter {
@@ -40,22 +59,4 @@ object {
   height: auto;
   border: 1px solid #444;
   background: #1e1e1e;
-}
-
-#dem-btn {
-  background-color: #1B2A41;
-  color: white;
-  border: 2px solid #375A85;
-}
-
-#rep-btn {
-  background-color: #812B2B;
-  color: white;
-  border: 2px solid #B25B5B;
-}
-
-#tossup-btn {
-  background-color: #C4C4C4;
-  color: black;
-  border: 2px solid #999;
 }
