--- a/style.css
+++ b/style.css
@@ -61,15 +61,15 @@ button.selected {
 }
 
 .dem {
-  color: #0f224d;
+  color: #3b73b9;
 }
 
 .rep {
-  color: #7c131a;
+  color: #cc6c5a;
 }
 
 .tossup {
-  color: #c4c4c4;
+  color: #d0d0d0;
 }
 
 .instructions {
